--- a/admin/index.html
+++ b/admin/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://unpkg.com/@staticcms/app@^3.0.0/dist/main.css" />
   </head>
   <body>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script src="https://unpkg.com/@staticcms/app@^3.0.0/dist/static-cms-app.js"></script>
     <script>
       window.CMS.init();
     </script>
   </body>
   </html>
-
